@@ -1,3 +1,8 @@
+2012-08-17  Jan Nijtmans  <nijtmans@users.sf.net>
+
+	* win/nmakehlp.c: Add "-V<num>" option, in order to be able
+	to detect partial version numbers.
+
 2012-08-03  Francois Vogel  <fvogelnew1@free.fr>
 
 	* tests/bind.test:  [Bug 3554081]: Test bind-22.10 failed
